feat: :sparkles: Add vitepress language docs and editor component

--- a/templates/index.html
+++ b/templates/index.html
@@ -233,7 +233,7 @@ greet("World");`);
             outputArea.textContent = "// Executing code...";
 
             try {
-                const response = await fetch('/execute', {
+                const response = await fetch('/api/execute', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
